--- a/GRU.ipynb
+++ b/GRU.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMyMVRkFmGz68VUqsQKzBHf",
+      "authorship_tag": "ABX9TyOMKPsFusx4t7ARKkxwC4ii",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,122 +28,73 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "source": [
+        "import numpy as np\n",
+        "import tensorflow as tf\n",
+        "from keras.datasets import imdb\n",
+        "from keras.models import Sequential\n",
+        "from keras.layers import Embedding, GRU, Dense\n",
+        "from keras.preprocessing.sequence import pad_sequences\n",
+        "from keras.callbacks import EarlyStopping\n",
+        "\n",
+        "# Загрузка данных IMDb\n",
+        "(x_train, y_train), (x_test, y_test) = imdb.load_data(num_words=10000)\n",
+        "\n",
+        "\n",
+        "# Преобразование данных в векторы\n",
+        "max_length = max([len(x) for x in x_train])\n",
+        "x_train = pad_sequences(x_train, maxlen=max_length)\n",
+        "x_test = pad_sequences(x_test, maxlen=max_length)\n",
+        "\n",
+        "\n",
+        "# Определение модели\n",
+        "model = Sequential()\n",
+        "model.add(Embedding(10000, 64, input_length=max_length))\n",
+        "model.add(GRU(64, return_sequences=True, dropout=0.2))\n",
+        "model.add(GRU(32, dropout=0.2))\n",
+        "model.add(Dense(1, activation='linear'))\n",
+        "\n",
+        "\n",
+        "# Компиляция модели\n",
+        "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
+        "# Обучение модели\n",
+        "\n",
+        "early_stopping = EarlyStopping(monitor='val_loss', patience=3)\n",
+        "model.fit(x_train, y_train, epochs=10, validation_split=0.2, callbacks=[early_stopping])\n",
+        "\n",
+        "# Сохранение модели\n",
+        "model.save('model.keras')\n",
+        "# Оценка точности модели\n",
+        "loss, accuracy = model.evaluate(x_test, y_test)\n",
+        "print('Тестовая точность:', accuracy)\n",
+        "\n",
+        "x1 = [x_train[0]]\n",
+        "print(model.predict(np.array(x1)))\n",
+        "\n",
+        "x2 = [x_train[1]]\n",
+        "print(model.predict(np.array(x2)))"
+      ],
       "metadata": {
+        "id": "oMQoC82Ckp-C",
+        "outputId": "268c368f-ad0c-48aa-8aa7-b95a92064b76",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "F0-cu3b4TZRk",
-        "outputId": "9460df02-b473-4c37-8d41-fba539d3bde7"
+        }
       },
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Epoch 1/10\n",
-            "1/1 [==============================] - 2s 2s/step - loss: 0.0000e+00 - accuracy: 0.1905\n",
+            "625/625 [==============================] - 2251s 4s/step - loss: 0.6309 - accuracy: 0.6712 - val_loss: 0.5576 - val_accuracy: 0.7078\n",
             "Epoch 2/10\n",
-            "1/1 [==============================] - 0s 8ms/step - loss: 0.0000e+00 - accuracy: 0.1905\n",
+            "625/625 [==============================] - 2218s 4s/step - loss: 0.4300 - accuracy: 0.8348 - val_loss: 0.3911 - val_accuracy: 0.8444\n",
             "Epoch 3/10\n",
-            "1/1 [==============================] - 0s 12ms/step - loss: 0.0000e+00 - accuracy: 0.1905\n",
-            "Epoch 4/10\n",
-            "1/1 [==============================] - 0s 8ms/step - loss: 0.0000e+00 - accuracy: 0.1905\n",
-            "Epoch 5/10\n",
-            "1/1 [==============================] - 0s 9ms/step - loss: 0.0000e+00 - accuracy: 0.1905\n",
-            "Epoch 6/10\n",
-            "1/1 [==============================] - 0s 8ms/step - loss: 0.0000e+00 - accuracy: 0.1905\n",
-            "Epoch 7/10\n",
-            "1/1 [==============================] - 0s 9ms/step - loss: 0.0000e+00 - accuracy: 0.1905\n",
-            "Epoch 8/10\n",
-            "1/1 [==============================] - 0s 9ms/step - loss: 0.0000e+00 - accuracy: 0.1905\n",
-            "Epoch 9/10\n",
-            "1/1 [==============================] - 0s 9ms/step - loss: 0.0000e+00 - accuracy: 0.1905\n",
-            "Epoch 10/10\n",
-            "1/1 [==============================] - 0s 14ms/step - loss: 0.0000e+00 - accuracy: 0.1905\n",
-            "1/1 [==============================] - 0s 289ms/step\n",
-            "1/1 [==============================] - 0s 15ms/step\n",
-            "1/1 [==============================] - 0s 15ms/step\n",
-            "1/1 [==============================] - 0s 22ms/step\n",
-            "1/1 [==============================] - 0s 15ms/step\n",
-            "1/1 [==============================] - 0s 15ms/step\n",
-            "1/1 [==============================] - 0s 15ms/step\n",
-            "1/1 [==============================] - 0s 15ms/step\n",
-            "1/1 [==============================] - 0s 15ms/step\n",
-            "1/1 [==============================] - 0s 16ms/step\n",
-            "1/1 [==============================] - 0s 16ms/step\n",
-            "1/1 [==============================] - 0s 17ms/step\n",
-            "1/1 [==============================] - 0s 16ms/step\n",
-            "1/1 [==============================] - 0s 14ms/step\n",
-            "1/1 [==============================] - 0s 14ms/step\n",
-            "1/1 [==============================] - 0s 18ms/step\n",
-            "1/1 [==============================] - 0s 15ms/step\n",
-            "1/1 [==============================] - 0s 16ms/step\n",
-            "1/1 [==============================] - 0s 15ms/step\n",
-            "1/1 [==============================] - 0s 15ms/step\n",
-            "here a a a a a a a a a a a a a a a a a a a a\n"
+            "418/625 [===================>..........] - ETA: 11:52 - loss: 0.3537 - accuracy: 0.8675"
           ]
         }
-      ],
-      "source": [
-        "import numpy as np\n",
-        "from tensorflow.keras.models import Sequential\n",
-        "from tensorflow.keras.layers import GRU, Dense, Embedding, TimeDistributed\n",
-        "\n",
-        "# Загрузка датасета\n",
-        "dataset = ['this is a sample text', 'here is another example', 'and a third one for good measure']\n",
-        "\n",
-        "# Создание словаря\n",
-        "vocab = set()\n",
-        "for text in dataset:\n",
-        "    vocab.update(text.split())\n",
-        "word2idx = {word: idx for idx, word in enumerate(vocab)}\n",
-        "idx2word = {idx: word for word, idx in word2idx.items()}\n",
-        "\n",
-        "# Преобразование текста в последовательности индексов\n",
-        "max_len = max(len(text.split()) for text in dataset)\n",
-        "X = np.zeros((len(dataset), max_len))\n",
-        "for i, text in enumerate(dataset):\n",
-        "    words = text.split()\n",
-        "    for j, word in enumerate(words):\n",
-        "        X[i, j] = word2idx[word]\n",
-        "\n",
-        "# Создание массива целевых значений\n",
-        "y = np.zeros((len(dataset), max_len, 2))\n",
-        "for i, text in enumerate(dataset):\n",
-        "    words = text.split()\n",
-        "    for j, word in enumerate(words):\n",
-        "        if j < max_len:\n",
-        "            if 'positive' in text:\n",
-        "                y[i, j, 0] = 1\n",
-        "            elif 'negative' in text:\n",
-        "                y[i, j, 1] = 1\n",
-        "\n",
-        "# Определение модели\n",
-        "model = Sequential()\n",
-        "model.add(Embedding(len(vocab), 10, input_length=max_len))\n",
-        "model.add(GRU(32, return_sequences=True))\n",
-        "model.add(TimeDistributed(Dense(2, activation='softmax')))\n",
-        "\n",
-        "# Компиляция модели\n",
-        "model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
-        "\n",
-        "# Обучение модели\n",
-        "model.fit(X, y, epochs=10, batch_size=32)\n",
-        "\n",
-        "# Генерация нового текста\n",
-        "start_idx = np.random.randint(0, len(vocab))\n",
-        "start_word = idx2word[start_idx]\n",
-        "generated_text = [start_word]\n",
-        "for i in range(20):\n",
-        "    x = np.zeros((1, max_len))\n",
-        "    x[0, 0] = start_idx\n",
-        "    preds = model.predict(x)[0]\n",
-        "    next_idx = np.argmax(preds[0])\n",
-        "    next_word = idx2word[next_idx]\n",
-        "    generated_text.append(next_word)\n",
-        "    start_idx = next_idx\n",
-        "print(' '.join(generated_text))"
       ]
     }
   ]
